--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "worker": "tsx --env-file=.env.local src/temporal/workers/traffic-worker.ts",
     "dev:worker": "tsx watch --env-file=.env.local src/temporal/workers/traffic-worker.ts",
-    "temporal:server": "temporal server start-dev"
+    "temporal:server": "temporal server start-dev",
+    "test": "jest --no-watchman",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:temporal": "jest --testPathPattern=temporal"
   },
   "dependencies": {
     "@temporalio/activity": "^1.11.8",
@@ -28,12 +32,22 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@temporalio/testing": "^1.11.8",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^15.0.7",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-jest": "^30.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5"
   }
